# pse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  mcp_server.py  models.py  schemas.py  stats.py  templating.py  urls.py
app/crawler/: fetcher.py  parser.py  robots.py  scope.py  worker.py
app/federation/: client.py
app/index/: indexer.py  search.py
app/ranking/: pagerank.py
app/routers/: admin.py  api.py  search.py
app/seeding/: discover.py  importers.py
app/static/: style.css  theme.js
app/templates/: base.html
app/templates/admin/: _layout.html  _stats.html  dashboard.html  discovered.html  peers.html  seeds.html
app/templates/search/: _results.html  index.html
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: seed_examples.py
tests/: conftest.py  test_importers.py  test_integration.py  test_mcp.py  test_pagerank_graph.py  test_parser.py  test_scope.py
