[project]
name = "pse"
version = "0.1.0"
description = "A personalized, local-first search engine: seed trusted domains, crawl + index them, and rank with PageRank."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CJ Barker" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "networkx>=3.3",
    "scipy>=1.11",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "feedparser>=6.0",
    "tldextract>=5.1",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults

[tool.ruff.lint.per-file-ignores]
# Migrations favor one column definition per line, even when long.
"migrations/versions/*.py" = ["E501"]
# conftest must set env vars before importing app modules.
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
